--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -143,4 +143,4 @@ jhipster:
 # ===================================================================
 
 application:
-    disableSecurity: true
+    disableSecurity: false
