--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -63,6 +63,45 @@ spring:
     thymeleaf:
         mode: XHTML
 
+# ===================================================================
+# OpenID Connect Settings. Default settings are for Keycloak in Docker.
+# Start Keycloak using `docker-compose -f src/main/docker/keycloak.yml up`.
+#
+# To use Okta, your settings should resemble the following:
+#
+# accessTokenUri: https://{yourOktaDomain}.com/oauth2/default/v1/token
+# userAuthorizationUri: https://{yourOktaDomain}.com/oauth2/default/v1/authorize
+# clientId: {copy after creating an OIDC app}
+# clientSecret: {copy after creating an OIDC app}
+# userInfoUri: https://{yourOktaDomain}.com/oauth2/default/v1/userinfo
+# tokenInfoUri: https://{yourOktaDomain}.com/oauth2/default/v1/introspect
+#
+# You can also override these properties using environment variables.
+# For example:
+#
+# export SECURITY_OAUTH2_CLIENT_CLIENT_ID="jhipster"
+# export SECURITY_OAUTH2_CLIENT_CLIENT_SECRET="38561a05"
+# ===================================================================
+security:
+    basic:
+        enabled: false
+    oauth2:
+        client:
+            access-token-uri: ${KEYCLOAK_EXT_URL}/auth/realms/jhipster/protocol/openid-connect/token
+            user-authorization-uri: ${KEYCLOAK_EXT_URL}/auth/realms/jhipster/protocol/openid-connect/auth
+            client-id: internal
+            client-secret: internal
+            authentication-scheme: header
+            client-authentication-scheme: header
+        resource:
+            id: web_app
+            filter-order: 3
+            user-info-uri: ${KEYCLOAK_EXT_URL}/auth/realms/jhipster/protocol/openid-connect/userinfo
+            token-info-uri: ${KEYCLOAK_EXT_URL}/auth/realms/jhipster/protocol/openid-connect/token/introspect
+            prefer-token-info: false
+            jwt:
+                key-uri: ${KEYCLOAK_EXT_URL}/auth/realms/jhipster
+
 server:
     session:
         cookie:
