--- a/src/main/kubernetes/claims.yml
+++ b/src/main/kubernetes/claims.yml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: claims
-        image: "projectx/claims:vijay"
+        image: "wsibdigital.azurecr.io/projectx/claims:vijay"
         imagePullPolicy: Always
         command: [
             "java",
