changing image name

--- a/src/main/kubernetes/claims.yml
+++ b/src/main/kubernetes/claims.yml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: claims
-        image: "wsibdigital.azurecr.io/projectx/claims:vijay"
+        image: "wsibdigital.azurecr.io/projectx/claims"
         imagePullPolicy: Always
         command: [
             "java",
