--- a/src/test/gatling/conf/gatling.conf
+++ b/src/test/gatling/conf/gatling.conf
@@ -74,12 +74,12 @@ gatling {
         }
         ahc {
             #keepAlive = true                                # Allow pooling HTTP connections (keep-alive header automatically added)
-            #connectTimeout = 10000                          # Timeout when establishing a connection
+            connectTimeout = 20000                          # Timeout when establishing a connection
             #handshakeTimeout = 10000                        # Timeout when performing TLS hashshake
             #pooledConnectionIdleTimeout = 60000             # Timeout when a connection stays unused in the pool
             #readTimeout = 60000                             # Timeout when a used connection stays idle
             #maxRetry = 2                                    # Number of times that a request should be tried again
-            #requestTimeout = 60000                          # Timeout of the requests
+            requestTimeout = 60000                          # Timeout of the requests
             #acceptAnyCertificate = true                     # When set to true, doesn't validate SSL certificates
             #httpClientCodecMaxInitialLineLength = 4096      # Maximum length of the initial line of the response (e.g. "HTTP/1.0 200 OK")
             #httpClientCodecMaxHeaderSize = 8192             # Maximum size, in bytes, of each request's headers
