--- a/pom.xml
+++ b/pom.xml
@@ -929,6 +929,18 @@
                             <scalaVersion>${scala.version}</scalaVersion>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-maven-plugin</artifactId>
+                        <version>2.7</version>
+                        <configuration>
+                            <formats>
+                                <format>html</format>
+                                <format>xml</format>
+                            </formats>
+                            <check />
+                        </configuration>
+			        </plugin>
                 </plugins>
             </build>
             <properties>
